Fix post alignment

--- a/_sass/news.scss
+++ b/_sass/news.scss
@@ -139,7 +139,6 @@
 	.news-container {
 		display: flex;
 		gap: 0;
-		margin-left: 90px;
 		align-items: stretch;
 	}
 
